# optimizacion-compras-sepa

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: .dockerignore  Dockerfile  README.md  pyproject.toml  requirements.txt
apps/api/app/: main.py
apps/api/app/core/: config.py  security.py
apps/api/app/domain/: __init__.py  auth.py  carrito.py  catalogo.py  compra_guiada.py  optimizacion.py  ports.py  sucursales_service.py
apps/api/app/infra/: auth_repo.py  carrito_repo.py  catalogo_repo.py  compra_guiada_repo.py  db.py  distribucion_repo.py  email.py  geo_clients.py  imagenes_jumbo.py  motor_ortools.py  sucursales_repo.py
apps/api/tests/: test_auth_endpoints.py  test_carrito_conversion.py  test_carrito_service.py  test_carritos_router.py  test_catalogo_repo_integration.py  test_catalogo_service.py  test_compra_guiada_repo_integration.py  test_compra_guiada_service.py  test_compras_guiadas_router.py  test_distribucion_integration.py  test_distribucion_router.py  test_distribucion_service.py  test_geo_clients.py  test_health.py  test_motor_ortools.py  test_preferencias_router.py  test_productos_router.py  test_security.py
apps/ingesta/: Dockerfile  README.md  pyproject.toml  requirements.txt
apps/ingesta/ingesta/: __main__.py  ckan_client.py  config.py  downloader.py  ean_validator.py  lote_manager.py  normalizadores.py  parser.py  repository.py
apps/ingesta/tests/: conftest.py  test_ckan_client.py  test_ean_validator.py  test_normalizadores.py  test_parser.py  test_pipeline.py  test_repository.py  test_smoke.py
infra/: .env.example  (+1 more)
(+122 files in other folders)
